# gaming_copilot

./: .gitignore  README.md
ai_brains/: image_stuff.py  improved_ingestion.py  ingestion.py  test_retrieval.py  wiki_cleanup.py  xml_post_processing.py  xml_splitter.py
electron_app/: README.md  package.json
electron_app/src/: app.tsx  index.css  main.js  main.ts  preload.js
electron_app/src/main-process/: bubble.tsx  wrapper.tsx
electron_app/src/scripts/: bubble.js  input.js  sse.js
electron_app/src/styles/: bubble.css  input.css  variables.css
electron_app/src/utils/: events.js
electron_app/src/windows/: bubble.html  input.html
python_server/: README.md  chat_app.py  config.py  dummy_data.json  main.py  pinecone_deletion.py  pinecone_ingestion.py  pyproject.toml  requirements.txt  scraped_data.json  test_script.py
python_server/api/: api_models.py
python_server/api/v1/: routers.py
python_server/api/v1/endpoints/: generate_langchain_response_endpoint.py  generate_response_endpoint.py  vision_screenshot_endpoint.py
python_server/langgraph/: execution_graphs.py  langgraph_models.py
python_server/scripts/: pinecone_deletion.py  pinecone_ingestion.py  scrape_firecrawl.py  urls.py  wiki_json.json
python_server/test_scripts/: langchain_response_test.py  vision_screenshot_test.py
