[tool.poetry]
name = "python-server"
version = "0.1.0"
description = "Python server for the gaming copilot."
authors = ["David Klueners <davidklueners@gmail.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "^0.115.6"
pydantic = "^2.10.5"
pytz = "^2024.2"
uvicorn = "^0.34.0"
requests = "^2.32.3"
markdown2 = "^2.5.2"
python-dotenv = "^1.0.1"
weaviate-haystack = "^4.0.2"
haystack-ai = "^2.9.0"
mistral-haystack = "^0.0.2"
langchain-community = "^0.3.14"
weaviate-client = "^4.10.4"
pinecone = "^5.4.2"
langchain-pinecone = "^0.2.2"
mistralai = "^1.3.1"
langchain-mistralai = "^0.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
